# Penguins

./: README.md
T4_report/: Player.c  Player.h  board.c  board.h  input.c  input.h  input_validation.c  input_validation.h  main.c  player.c  player.h
doc/: Game rules  README.md  flowchart
src/: board.c  board.h  input.c  input.h  input_validation.c  input_validation.h  main.c  player.c  player.h
src/AutonomousMode/: CMakeLists.txt  a.txt  command_line.c  command_line.h  errors_handler.c  errors_handler.h  main.c  reading_data.h
src/AutonomousMode/boards_n_gameMaster/: board02.txt
src/InteractiveMode/: board.h.gch  input.h.gch  input_validation.c  input_validation.h  input_validation.h.gch  player.h.gch
src/Tests/: test.c
